force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/Rev_Covamo_Yearly_FS__c.object-meta.xml
<CustomObject>
    <label>Covamo Yearly FS</label>
    <nameField>
        <displayFormat>Cov Yearly - {0000}</displayFormat>
        <label>Covamo  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covamo Yearly FSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>