force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/Average_ROACE__c.field-meta.xml
<CustomField>
    <fullName>Average_ROACE__c</fullName>
    <label>Average_ROACE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>