force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/BDF_Amortization__c.field-meta.xml
<CustomField>
    <fullName>BDF_Amortization__c</fullName>
    <label>BDF Amortization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>