force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/C10_NIBIAT_CCS__c.field-meta.xml
<CustomField>
    <fullName>C10_NIBIAT_CCS__c</fullName>
    <label>C10 NIBIAT CCS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>