force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/C3_Margin__c.field-meta.xml
<CustomField>
    <fullName>C3_Margin__c</fullName>
    <label>C3 Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>