force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/C5_Cash_Contribution__c.field-meta.xml
<CustomField>
    <fullName>C5_Cash_Contribution__c</fullName>
    <label>C5 Cash Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>