force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/Capital_Employed__c.field-meta.xml
<CustomField>
    <fullName>Capital_Employed__c</fullName>
    <label>Capital Employed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>