force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/Net_Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>Net_Cash_Flow__c</fullName>
    <label>Net Cash Flow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>