force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/Net_Cash_Flow_RT_W_O_Inflation__c.field-meta.xml
<CustomField>
    <fullName>Net_Cash_Flow_RT_W_O_Inflation__c</fullName>
    <label>Net Cash Flow- RT (W/O Inflation)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>