force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/Rev_Covamo_Header__c.field-meta.xml
<CustomField>
    <fullName>Rev_Covamo_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Covamo Header</label>
    <referenceTo>Rev_Covamo_Header__c</referenceTo>
    <relationshipLabel>Covamo Yearly FSs</relationshipLabel>
    <relationshipName>Covamo_Yearly_FSs</relationshipName>
    <type>Lookup</type>
</CustomField>