force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/VIR__c.field-meta.xml
<CustomField>
    <fullName>VIR__c</fullName>
    <label>VIR</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>