force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/VIR_Denominator__c.field-meta.xml
<CustomField>
    <fullName>VIR_Denominator__c</fullName>
    <label>VIR Denominator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>