force-app/main/default/objects/Rev_Covamo_Yearly_FS__c/fields/Working_Capital_Movements__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital_Movements__c</fullName>
    <label>Working Capital Movements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>